--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
 	<properties>
 		<!-- Maven -->
-		<java.version>1.8</java.version>
+		<java.version>11</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.build.timestamp.format>yyyy.MM.dd-hh.mm</maven.build.timestamp.format>
@@ -54,21 +54,20 @@
 		<twitter4j.version>4.0.7</twitter4j.version>
 
 		<!-- Bonita -->
-		<bonita.engine.version>7.11.0</bonita.engine.version>
+		<bonita.engine.version>7.13.0</bonita.engine.version>
 
 		<!-- Test -->
-		<jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
+		<jacoco-maven-plugin.version>0.8.8</jacoco-maven-plugin.version>
 		<sonar-maven-plugin.version>3.7.0.1746</sonar-maven-plugin.version>
 
 		<!-- Maven plugins -->
-		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
-		<maven.compiler.source>${java.version}</maven.compiler.source>
-		<maven.compiler.target>${java.version}</maven.compiler.target>
+		<maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
+		<maven.compiler.release>${java.version}</maven.compiler.release>
 		<maven-assembly-plugin.version>3.1.1</maven-assembly-plugin.version>
 		<groovy-maven-plugin.version>2.1.1</groovy-maven-plugin.version>
-		<groovy-all.version>2.4.16</groovy-all.version>
-		<maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
-		<nexus-staging-maven-plugin.version>1.6.8</nexus-staging-maven-plugin.version>
+		<groovy.version>3.0.11</groovy.version>
+		<maven-surefire-plugin.version>3.0.0-M6</maven-surefire-plugin.version>
+		<nexus-staging-maven-plugin.version>1.6.13</nexus-staging-maven-plugin.version>
 		<maven-javadoc-plugin.version>3.2.0</maven-javadoc-plugin.version>
 		<maven-source-plugin.version>3.2.0</maven-source-plugin.version>
 
@@ -165,8 +164,8 @@
 					<dependencies>
 						<dependency>
 							<groupId>org.codehaus.groovy</groupId>
-							<artifactId>groovy-all</artifactId>
-							<version>${groovy-all.version}</version>
+							<artifactId>groovy</artifactId>
+							<version>${groovy.version}</version>
 						</dependency>
 					</dependencies>
 				</plugin>
